src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void MSER_setEdgeBlurSize_0(void* self, int edge_blur_size);
extern "C" __declspec(dllexport) int MSER_getEdgeBlurSize_0(void* self);
extern "C" __declspec(dllexport) void MSER_setPass2Only_0(void* self, bool f);
extern "C" __declspec(dllexport) bool MSER_getPass2Only_0(void* self);
extern "C" __declspec(dllexport) const char* MSER_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void ORB_Delete(void* self);
extern "C" __declspec(dllexport) void* ORB_create_0(int nfeatures, float scaleFactor, int nlevels, int edgeThreshold, int firstLevel, int WTA_K, void* scoreType, int patchSize, int fastThreshold);
extern "C" __declspec(dllexport) void ORB_setMaxFeatures_0(void* self, int maxFeatures);
extern "C" __declspec(dllexport) int ORB_getMaxFeatures_0(void* self);
extern "C" __declspec(dllexport) void ORB_setScaleFactor_0(void* self, double scaleFactor);
extern "C" __declspec(dllexport) double ORB_getScaleFactor_0(void* self);
extern "C" __declspec(dllexport) void ORB_setNLevels_0(void* self, int nlevels);
extern "C" __declspec(dllexport) int ORB_getNLevels_0(void* self);
extern "C" __declspec(dllexport) void ORB_setEdgeThreshold_0(void* self, int edgeThreshold);
extern "C" __declspec(dllexport) int ORB_getEdgeThreshold_0(void* self);
extern "C" __declspec(dllexport) void ORB_setFirstLevel_0(void* self, int firstLevel);
extern "C" __declspec(dllexport) int ORB_getFirstLevel_0(void* self);
extern "C" __declspec(dllexport) void ORB_setWTA_K_0(void* self, int wta_k);
extern "C" __declspec(dllexport) int ORB_getWTA_K_0(void* self);
extern "C" __declspec(dllexport) void ORB_setScoreType_0(void* self, void* scoreType);
extern "C" __declspec(dllexport) void* ORB_getScoreType_0(void* self);
extern "C" __declspec(dllexport) void ORB_setPatchSize_0(void* self, int patchSize);
extern "C" __declspec(dllexport) int ORB_getPatchSize_0(void* self);
extern "C" __declspec(dllexport) void ORB_setFastThreshold_0(void* self, int fastThreshold);
extern "C" __declspec(dllexport) int ORB_getFastThreshold_0(void* self);
extern "C" __declspec(dllexport) const char* ORB_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void SIFT_Delete(void* self);
extern "C" __declspec(dllexport) void* SIFT_create_0(int nfeatures, int nOctaveLayers, double contrastThreshold, double edgeThreshold, double sigma, bool enable_precise_upscale);
extern "C" __declspec(dllexport) void* SIFT_create_1(int nfeatures, int nOctaveLayers, double contrastThreshold, double edgeThreshold, double sigma, int descriptorType, bool enable_precise_upscale);
extern "C" __declspec(dllexport) const char* SIFT_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void SIFT_setNFeatures_0(void* self, int maxFeatures);
extern "C" __declspec(dllexport) int SIFT_getNFeatures_0(void* self);
extern "C" __declspec(dllexport) void SIFT_setNOctaveLayers_0(void* self, int nOctaveLayers);
extern "C" __declspec(dllexport) int SIFT_getNOctaveLayers_0(void* self);
extern "C" __declspec(dllexport) void SIFT_setContrastThreshold_0(void* self, double contrastThreshold);
extern "C" __declspec(dllexport) double SIFT_getContrastThreshold_0(void* self);
extern "C" __declspec(dllexport) void SIFT_setEdgeThreshold_0(void* self, double edgeThreshold);
extern "C" __declspec(dllexport) double SIFT_getEdgeThreshold_0(void* self);
extern "C" __declspec(dllexport) void SIFT_setSigma_0(void* self, double sigma);
extern "C" __declspec(dllexport) double SIFT_getSigma_0(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* SimpleBlobDetector_create_0(void* parameters);
extern "C" __declspec(dllexport) void SimpleBlobDetector_setParams_0(void* self, void* params);
extern "C" __declspec(dllexport) void* SimpleBlobDetector_getParams_0(void* self);
extern "C" __declspec(dllexport) const char* SimpleBlobDetector_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void* SimpleBlobDetector_getBlobContours_0(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* SimpleBlobDetector_Params_New_0();
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_thresholdStep_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_thresholdStep_set(void* self, float val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_minThreshold_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minThreshold_set(void* self, float val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_maxThreshold_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_maxThreshold_set(void* self, float val);
extern "C" __declspec(dllexport) size_t SimpleBlobDetector_Params_minRepeatability_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minRepeatability_set(void* self, size_t val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_minDistBetweenBlobs_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minDistBetweenBlobs_set(void* self, float val);
extern "C" __declspec(dllexport) bool SimpleBlobDetector_Params_filterByColor_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_filterByColor_set(void* self, bool val);
extern "C" __declspec(dllexport) uchar SimpleBlobDetector_Params_blobColor_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_blobColor_set(void* self, uchar val);
extern "C" __declspec(dllexport) bool SimpleBlobDetector_Params_filterByArea_get(void* self);