src/OpenCV5Sharp/Generated/NativeMethods.Features.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setEdgeBlurSize_0(MserHandle self, int edge_blur_size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSER_getEdgeBlurSize_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setPass2Only_0(MserHandle self, [MarshalAs(UnmanagedType.U1)] bool f);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool MSER_getPass2Only_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_getDefaultName_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ORB_create_0(int nfeatures, float scaleFactor, int nlevels, int edgeThreshold, int firstLevel, int WTA_K, IntPtr scoreType, int patchSize, int fastThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setMaxFeatures_0(OrbHandle self, int maxFeatures);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getMaxFeatures_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setScaleFactor_0(OrbHandle self, double scaleFactor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double ORB_getScaleFactor_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setNLevels_0(OrbHandle self, int nlevels);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getNLevels_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setEdgeThreshold_0(OrbHandle self, int edgeThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getEdgeThreshold_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setFirstLevel_0(OrbHandle self, int firstLevel);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getFirstLevel_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setWTA_K_0(OrbHandle self, int wta_k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getWTA_K_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setScoreType_0(OrbHandle self, int scoreType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getScoreType_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setPatchSize_0(OrbHandle self, int patchSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getPatchSize_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ORB_setFastThreshold_0(OrbHandle self, int fastThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ORB_getFastThreshold_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ORB_getDefaultName_0(OrbHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SIFT_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SIFT_create_0(int nfeatures, int nOctaveLayers, double contrastThreshold, double edgeThreshold, double sigma, [MarshalAs(UnmanagedType.U1)] bool enable_precise_upscale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SIFT_create_1(int nfeatures, int nOctaveLayers, double contrastThreshold, double edgeThreshold, double sigma, int descriptorType, [MarshalAs(UnmanagedType.U1)] bool enable_precise_upscale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SIFT_getDefaultName_0(SiftHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SIFT_setNFeatures_0(SiftHandle self, int maxFeatures);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SIFT_getNFeatures_0(SiftHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SIFT_setNOctaveLayers_0(SiftHandle self, int nOctaveLayers);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SIFT_getNOctaveLayers_0(SiftHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SIFT_setContrastThreshold_0(SiftHandle self, double contrastThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double SIFT_getContrastThreshold_0(SiftHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SIFT_setEdgeThreshold_0(SiftHandle self, double edgeThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double SIFT_getEdgeThreshold_0(SiftHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SIFT_setSigma_0(SiftHandle self, double sigma);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double SIFT_getSigma_0(SiftHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleBlobDetector_create_0(IntPtr parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_setParams_0(SimpleBlobDetectorHandle self, SimpleBlobDetectorParamsHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleBlobDetector_getParams_0(SimpleBlobDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleBlobDetector_getDefaultName_0(SimpleBlobDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleBlobDetector_getBlobContours_0(SimpleBlobDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SimpleBlobDetector_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_thresholdStep_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_thresholdStep_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_minThreshold_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minThreshold_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_maxThreshold_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_maxThreshold_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern long SimpleBlobDetector_Params_minRepeatability_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minRepeatability_set(SimpleBlobDetectorParamsHandle self, long val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_minDistBetweenBlobs_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minDistBetweenBlobs_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SimpleBlobDetector_Params_filterByColor_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_filterByColor_set(SimpleBlobDetectorParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern byte SimpleBlobDetector_Params_blobColor_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_blobColor_set(SimpleBlobDetectorParamsHandle self, byte val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SimpleBlobDetector_Params_filterByArea_get(SimpleBlobDetectorParamsHandle self);
